<resources>
    <string name="app_name">ChallengeChapterTiga</string>
    <string name="go_to_screen_2">Go To Screen 2</string>
    <string name="go_to_screen_3">Go To Screen 3</string>
    <string name="screen_1">Screen 1</string>
    <string name="screen_2">Screen 2</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="screen_3">Screen 3</string>
    <string name="masukkan_usia">Masukkan Usia</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="masukkan_pekerjaan">Masukkan Pekerjaan</string>
    <string name="go_to_screen_4">Go To Screen 4</string>
    <string name="screen_4">Screen 4</string>
</resources>