<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentScreenEmpat">

    <TextView
        style="@style/TextStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/screen_4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_tiga"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_usia"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:paddingStart="15dp"
            android:background="@drawable/style_edit_text"
            android:hint="@string/masukkan_usia"
            android:autofillHints="Usia"
            android:inputType="number"
            tools:ignore="RtlSymmetry"
            />

        <EditText
            android:id="@+id/input_alamat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:paddingStart="15dp"
            android:background="@drawable/style_edit_text"
            android:hint="@string/masukkan_alamat"
            android:autofillHints="Alamat"
            android:inputType="text"
            tools:ignore="RtlSymmetry"
            />

        <EditText
            android:id="@+id/input_pekerjaan"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:paddingStart="15dp"
            android:background="@drawable/style_edit_text"
            android:hint="@string/masukkan_pekerjaan"
            android:autofillHints="Alamat"
            android:inputType="text"
            tools:ignore="RtlSymmetry"
            />

    </LinearLayout>



    <Button
        android:id="@+id/btn_tiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_screen_3"
        android:textAllCaps="false"
        android:layout_centerInParent="true"
        />

</RelativeLayout>